# rt-mcp

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  README.md  package.json
python/: pyproject.toml  rt_mcp.py
src/: export.ts  index.ts  lib.ts
